Bug 192846 - Kopete crash when opening hotmail account.
Summary: Kopete crash when opening hotmail account.
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 184899 195258 197335 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-05-16 06:18 UTC by Unknown
Modified: 2009-06-21 14:32 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Unknown 2009-05-16 06:18:56 UTC
Version:            (using KDE 4.2.2)
Compiler:          GCC/unknown version unknown
OS:                Linux
Installed from:    Debian testing/unstable Packages

Kopete 4.2.2 Linux Debian Unstable GCC don't know what version it was compiled in.

Kopete Crashes when I open my hotmail account.



Application: Kopete (kopete), signal SIGABRT
[Current thread is 0 (LWP 3661)]

Thread 2 (Thread 0xb01feb90 (LWP 12027)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb5d6afb5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i686/cmov/libpthread.so.0
#2  0xb62a705d in pthread_cond_wait () from /lib/i686/cmov/libc.so.6
#3  0xb6e4f822 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb5df9fd2 in ?? () from /usr/lib/libQtNetwork.so.4
#5  0xb6e4e80e in ?? () from /usr/lib/libQtCore.so.4
#6  0xb5d674e5 in start_thread () from /lib/i686/cmov/libpthread.so.0
#7  0xb629821e in clone () from /lib/i686/cmov/libc.so.6

Thread 1 (Thread 0xb5642710 (LWP 3661)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb6254376 in nanosleep () from /lib/i686/cmov/libc.so.6
#2  0xb625418e in sleep () from /lib/i686/cmov/libc.so.6
#3  0xb7515738 in ?? () from /usr/lib/libkdeui.so.5
#4  0x00000000 in ?? ()
Comment 1 Dario Andres 2009-05-16 15:20:54 UTC
As you can reproduce the crash at will, may you read http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports and post a complete backtrace here? 
You need to install the "kdenetwork-dbg" package.
Thanks
Comment 2 Unknown 2009-05-17 06:49:36 UTC
installed the debug package. Here is the dbug after crash. 

Application: Kopete (kopete), signal SIGABRT
[Current thread is 0 (LWP 10685)]

Thread 5 (Thread 0xb2a61b90 (LWP 10701)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb5ea8fb5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i686/cmov/libpthread.so.0
#2  0xb63e505d in __pthread_cond_wait (cond=0x8518dc0, mutex=0x8518da8) at forward.c:139
#3  0xb6f8d822 in QWaitCondition::wait (this=0x8518598, mutex=0x8518594, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#4  0xb5f37fd2 in QHostInfoAgent::run (this=0x8518588) at kernel/qhostinfo.cpp:260
#5  0xb6f8c80e in QThreadPrivate::start (arg=0x8518588) at thread/qthread_unix.cpp:189
#6  0xb5ea54e5 in start_thread (arg=0xb2a61b90) at pthread_create.c:300
#7  0xb63d621e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 4 (Thread 0xb10b8b90 (LWP 10702)):
#0  0xb5d560ac in *__GI_clock_gettime (clock_id=-1244291084, tp=0xb10b8048) at ../sysdeps/unix/clock_gettime.c:100
#1  0xb70acfeb in QTimerInfoList::getTime (this=0x85542e4, t=@0x8554308) at kernel/qeventdispatcher_unix.cpp:339
#2  0xb70ad1c1 in QTimerInfoList::updateCurrentTime (this=0x85542e4) at kernel/qeventdispatcher_unix.cpp:297
#3  0xb70aeefc in QTimerInfoList::timerWait (this=0x85542e4, tm=@0xb10b80c4) at kernel/qeventdispatcher_unix.cpp:420
#4  0xb70ab57a in timerSourcePrepare (source=0xb5d59ff4, timeout=0xb10b8118) at kernel/qeventdispatcher_glib.cpp:140
#5  0xb5cd8680 in IA__g_main_context_prepare (context=0x8556fc8, priority=0xb10b8188) at /build/buildd-glib2.0_2.20.1-2-i386-hGzT8z/glib2.0-2.20.1/glib/gmain.c:2134
#6  0xb5cd8a9a in g_main_context_iterate (context=0x8556fc8, block=1, dispatch=1, self=0x85546d0) at /build/buildd-glib2.0_2.20.1-2-i386-hGzT8z/glib2.0-2.20.1/glib/gmain.c:2428
#7  0xb5cd8f28 in IA__g_main_context_iteration (context=0x8556fc8, may_block=1) at /build/buildd-glib2.0_2.20.1-2-i386-hGzT8z/glib2.0-2.20.1/glib/gmain.c:2511
#8  0xb70ab3b7 in QEventDispatcherGlib::processEvents (this=0x8556f58, flags={i = -1324645880}) at kernel/qeventdispatcher_glib.cpp:326
#9  0xb707e05a in QEventLoop::processEvents (this=0x854b450, flags={i = -1324645816}) at kernel/qeventloop.cpp:149
#10 0xb707e49a in QEventLoop::exec (this=0x854b450, flags={i = -1324645580}) at kernel/qeventloop.cpp:200
#11 0xb2eb64ba in QCA::SyncThread::run () from /usr/lib/libqca.so.2
#12 0xb6f8c80e in QThreadPrivate::start (arg=0x8556ac8) at thread/qthread_unix.cpp:189
#13 0xb5ea54e5 in start_thread (arg=0xb10b8b90) at pthread_create.c:300
#14 0xb63d621e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 3 (Thread 0xb18ffb90 (LWP 10711)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb5ea92e2 in pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_timedwait.S:179
#2  0xb63e50b4 in __pthread_cond_timedwait (cond=0x8904a38, mutex=0x8904a20, abstime=0xb18ff2ac) at forward.c:152
#3  0xb6f8d7fc in QWaitCondition::wait (this=0x8904988, mutex=0x8904984, time=30000) at thread/qwaitcondition_unix.cpp:85
#4  0xb6f82db6 in QThreadPoolThread::run (this=0x8524548) at concurrent/qthreadpool.cpp:140
#5  0xb6f8c80e in QThreadPrivate::start (arg=0x8524548) at thread/qthread_unix.cpp:189
#6  0xb5ea54e5 in start_thread (arg=0xb18ffb90) at pthread_create.c:300
#7  0xb63d621e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130
Current language:  auto; currently c

Thread 2 (Thread 0xb2260b90 (LWP 10713)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb63ce6c1 in select () from /lib/i686/cmov/libc.so.6
#2  0xb2d3e7ad in posix_timer_do () from /usr/lib/libortp.so.8
#3  0xb2d3f380 in rtp_scheduler_schedule () from /usr/lib/libortp.so.8
#4  0xb5ea54e5 in start_thread (arg=0xb2260b90) at pthread_create.c:300
#5  0xb63d621e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 1 (Thread 0xb5780710 (LWP 10685)):
[KCrash Handler]
#6  0xffffe424 in __kernel_vsyscall ()
#7  0xb631e680 in *__GI_raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#8  0xb6321d68 in *__GI_abort () at abort.c:88
#9  0xb650df9f in __gnu_cxx::__verbose_terminate_handler () from /usr/lib/libstdc++.so.6
#10 0xb650be85 in ?? () from /usr/lib/libstdc++.so.6
#11 0xb650bec2 in std::terminate () from /usr/lib/libstdc++.so.6
#12 0xb650c001 in __cxa_throw () from /usr/lib/libstdc++.so.6
#13 0xb324718d in MSN::Passport::validate () from /usr/lib/libmsn.so.0.1
#14 0xb32931cc in WlmServer::WlmConnect (this=0x81cbb40, server=@0xbfe879a8, port=1863) at /usr/include/msn/passport.h:56
#15 0xb32897a7 in WlmAccount::connectWithPassword (this=0x844b148, pass=@0xbfe87b48) at ../../../../kopete/protocols/wlm/wlmaccount.cpp:293
#16 0xb7e00c78 in Kopete::PasswordedAccount::qt_metacall (this=0x844b148, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfe87aec) at ./kopetepasswordedaccount.moc:68
#17 0xb328bdaa in WlmAccount::qt_metacall (this=0x844b148, _c=QMetaObject::InvokeMetaMethod, _id=25, _a=0xbfe87aec) at ./wlmaccount.moc:147
#18 0xb7095b98 in QMetaObject::activate (sender=0x8307abc, from_signal_index=4, to_signal_index=4, argv=0xbfe87aec) at kernel/qobject.cpp:3120
#19 0xb7096822 in QMetaObject::activate (sender=0x8307abc, m=0xb7e482f4, local_signal_index=0, argv=0xbfe87aec) at kernel/qobject.cpp:3194
#20 0xb7dfd3c8 in KopetePasswordRequestBase::requestFinished (this=0x6, _t1=@0xbfe87b48) at ./kopetepassword.moc:143
#21 0xb7e0089f in KopetePasswordGetRequestPrompt::processRequest (this=0x8307a90) at ../../../kopete/libkopete/kopetepassword.cpp:152
#22 0xb7dfef57 in KopetePasswordRequest::walletReceived (this=0x8307a90, wallet=0x84e97b0) at ../../../kopete/libkopete/kopetepassword.cpp:98
#23 0xb7dfd4a4 in KopetePasswordRequestBase::qt_metacall (this=0x8307a90, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbfe87c8c) at ./kopetepassword.moc:130
#24 0xb7095b98 in QMetaObject::activate (sender=0x80cd6d0, from_signal_index=4, to_signal_index=4, argv=0xbfe87c8c) at kernel/qobject.cpp:3120
#25 0xb7096822 in QMetaObject::activate (sender=0x80cd6d0, m=0xb7e49580, local_signal_index=0, argv=0xbfe87c8c) at kernel/qobject.cpp:3194
#26 0xb7e19563 in KopeteWalletSignal::walletOpened (this=0x80cd6d0, _t1=0x84e97b0) at ./kopetewalletmanager.moc:144
#27 0xb7e1959a in Kopete::WalletManager::emitWalletOpened (this=0xb7e4bd08, wallet=0x84e97b0) at ../../../kopete/libkopete/kopetewalletmanager.cpp:184
#28 0xb7e1a5e4 in Kopete::WalletManager::slotGiveExistingWallet (this=0xb7e4bd08) at ../../../kopete/libkopete/kopetewalletmanager.cpp:154
#29 0xb7e1a8fd in Kopete::WalletManager::qt_metacall (this=0xb7e4bd08, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0xbfe87dc8) at ./kopetewalletmanager.moc:75
#30 0xb7095b98 in QMetaObject::activate (sender=0x8360ec0, from_signal_index=4, to_signal_index=4, argv=0x0) at kernel/qobject.cpp:3120
#31 0xb7096822 in QMetaObject::activate (sender=0x8360ec0, m=0xb7170ae8, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3194
#32 0xb709b027 in QSingleShotTimer::timeout (this=0x8360ec0) at .moc/release-shared/qtimer.moc:76
#33 0xb709b14c in QSingleShotTimer::timerEvent (this=0x8360ec0) at kernel/qtimer.cpp:298
#34 0xb709004f in QObject::event (this=0x8360ec0, e=0xbfe8824c) at kernel/qobject.cpp:1082
#35 0xb66867bc in QApplicationPrivate::notify_helper (this=0x80d1780, receiver=0x8360ec0, e=0xbfe8824c) at kernel/qapplication.cpp:4057
#36 0xb668eace in QApplication::notify (this=0xbfe884dc, receiver=0x8360ec0, e=0xbfe8824c) at kernel/qapplication.cpp:3604
#37 0xb75e3b7d in KApplication::notify (this=0xbfe884dc, receiver=0x8360ec0, event=0xbfe8824c) at ../../kdeui/kernel/kapplication.cpp:307
#38 0xb707fa2b in QCoreApplication::notifyInternal (this=0xbfe884dc, receiver=0x8360ec0, event=0xbfe8824c) at kernel/qcoreapplication.cpp:610
#39 0xb70aee41 in QTimerInfoList::activateTimers (this=0x80d4934) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#40 0xb70ab440 in timerSourceDispatch (source=0x80d4900) at kernel/qeventdispatcher_glib.cpp:164
#41 0xb5cd5848 in IA__g_main_context_dispatch (context=0x80d3c90) at /build/buildd-glib2.0_2.20.1-2-i386-hGzT8z/glib2.0-2.20.1/glib/gmain.c:1814
#42 0xb5cd8dab in g_main_context_iterate (context=0x80d3c90, block=1, dispatch=1, self=0x80d18b8) at /build/buildd-glib2.0_2.20.1-2-i386-hGzT8z/glib2.0-2.20.1/glib/gmain.c:2448
#43 0xb5cd8f28 in IA__g_main_context_iteration (context=0x80d3c90, may_block=1) at /build/buildd-glib2.0_2.20.1-2-i386-hGzT8z/glib2.0-2.20.1/glib/gmain.c:2511
#44 0xb70ab398 in QEventDispatcherGlib::processEvents (this=0x80b8ec0, flags={i = -1075280952}) at kernel/qeventdispatcher_glib.cpp:324
#45 0xb67270e5 in QGuiEventDispatcherGlib::processEvents (this=0x80b8ec0, flags={i = -1075280904}) at kernel/qguieventdispatcher_glib.cpp:202
#46 0xb707e05a in QEventLoop::processEvents (this=0xbfe88470, flags={i = -1075280840}) at kernel/qeventloop.cpp:149
#47 0xb707e49a in QEventLoop::exec (this=0xbfe88470, flags={i = -1075280776}) at kernel/qeventloop.cpp:200
#48 0xb7080949 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#49 0xb6686637 in QApplication::exec () at kernel/qapplication.cpp:3526
#50 0x0808a7ef in main (argc=3, argv=0xbfe888c4) at ../../../kopete/kopete/main.cpp:102
Comment 3 Dario Andres 2009-05-27 20:42:36 UTC
*** Bug 184899 has been marked as a duplicate of this bug. ***
Comment 4 Dario Andres 2009-05-27 20:43:05 UTC
What is your "libmsn" version ? Thanks
Comment 5 Roman Jarosz 2009-06-17 21:36:24 UTC
*** Bug 195258 has been marked as a duplicate of this bug. ***
Comment 6 Roman Jarosz 2009-06-17 21:40:38 UTC
Could anybody show me the crashing hotmail account id?
Comment 7 Lemuria 2009-06-17 21:49:13 UTC
This is it: Stita_57@hotmail.com


2009/6/17 Roman Jarosz <kedgedev@gmail.com>

> https://bugs.kde.org/show_bug.cgi?id=192846
>
>
>
>
>
> --- Comment #6 from Roman Jarosz <kedgedev gmail com>  2009-06-17 21:40:38
> ---
> Could anybody show me the crashing hotmail account id?
>
> --
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You are on the CC list for the bug.
>
Comment 8 Roman Jarosz 2009-06-17 21:53:16 UTC
Which libmsn version do you have? And also could you check that you didn't put any whitespaces around the account id
Comment 9 Lemuria 2009-06-17 21:56:11 UTC
I don't know what just happened, but it worked. My apologies.

2009/6/17 Roman Jarosz <kedgedev@gmail.com>

> https://bugs.kde.org/show_bug.cgi?id=192846
>
>
>
>
>
> --- Comment #8 from Roman Jarosz <kedgedev gmail com>  2009-06-17 21:53:16
> ---
> Which libmsn version do you have? And also could you check that you didn't
> put
> any whitespaces around the account id
>
> --
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You are on the CC list for the bug.
>
Comment 10 Roman Jarosz 2009-06-17 21:58:44 UTC
No problem, I think that you had whitespace around the id... it crashes here if I add whitespace before or after the id. Will fix that so it doesn't crash
Comment 11 Roman Jarosz 2009-06-17 22:29:27 UTC
SVN commit 983252 by rjarosz:

Strip whitespace from passport.
Use the same validation as libmsn so we show user error dialog instead of crash dialog :)

BUG: 192846 



 M  +2 -2      ui/wlmaddcontactpage.cpp  
 M  +2 -2      ui/wlmeditaccountwidget.cpp  
 M  +2 -1      wlmprotocol.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=983252
Comment 12 Dario Andres 2009-06-21 14:32:03 UTC
*** Bug 197335 has been marked as a duplicate of this bug. ***