Strip whitespace from passport. Use the same validation as libmsn so we show user error dialog instead of crash dialog :)

BUG: 192846 


svn path=/trunk/KDE/kdenetwork/kopete/; revision=983252